# cs320

./: Makefile  README.md
assigns/00/: assign00.dats
assigns/00/MySolution/: assign00_sol  assign00_sol.dats  assign00_sol_dats.c
assigns/00/Solution/: assign00_sol.dats
assigns/01/: assign01.dats
assigns/01/MySolution/: README.md  assign01_sol  assign01_sol.dats  assign01_sol_dats.c
assigns/01/Solution/: Makefile  assign01_sol.dats
assigns/02/: assign02.dats
assigns/02/MySolution/: README.md  assign02_sol  assign02_sol.dats
assigns/02/Solution/: Makefile  assign02_sol.dats
assigns/03/: assign03.dats
assigns/04/: assign04.dats
assigns/05/: assign05.dats
assigns/06/: QueenPuzzle_opt.dats
assigns/06-2/: Makefile  QueenPuzzle_exn.dats
assigns/07/: assign07.dats
assigns/07/Solution/: CMakeLists.txt  assign07_sol.dats
assigns/08/: README.txt
assigns/09/: README.txt
exams/midterm-1/: midterm-1.dats
exams/midterm-2/: midterm-2.dats
labs/: 01-helloworld.dats  02-lab.dats  02-syntax.dats  03-lab-solution.dats  03-lab.dats  05-lab.dats  07-lab.dats  08-lab.dats  09-lab.dats  10-lab.dats
labs/MySolutions/: 03-lab  03-lab.dats  03-lab_dats.c  07-lab.dats
labs/quiz01/: quiz01.dats
labs/quiz03/: Doublets  Doublets_dict.dats  Doublets_main.dats  Doublets_main_dats.c  Doublets_word.dats
lectures/lecture-01-26/: Makefile
lectures/lecture-03-16/: brauntree.dats
lectures/lecture-04-06/: stream_getdup.dats
lectures/lecture-04-13/: random_scene.dats
lectures/lecture-04-20/: kfact.dats
lectures/lecture-04-27/: bad-reverse.dats
(+180 files in other folders)
